# Beginning-Cpp-Game-Programming-Second-Edition

./: .gitignore  CMakeLists.txt
Chapter01/code/: Timber.cpp
Chapter05/: CMakeLists.txt
Chapter07/: CMakeLists.txt
Lab1/: CMakeLists.txt
Lab1/code/: Centipede.cpp  CentipedeMotion.cpp  ECE_Centipede.cpp  ECE_Centipede.h  ECE_Centipede.hpp  Game.cpp  Game.h  Laser.cpp  Laser.h  ProgramInfo.h  SFML_Window resizing.cpp  Timber.cpp  constants.h  materials.cpp  materials.h  types.h
Lab1/fonts/: materials.cpp  materials.h
